--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="grid-view" *ngIf="view === 'grid'">
     <div class="card text-center">
-        <div class="card-header fw-bold fs-5 text-success">
+        <!-- <div class="card-header fw-bold fs-5 text-success">
             Header
-        </div>
+        </div> -->
 
         <div class="overflow-hidden d-flex justify-content-center align-items-center">
             <img src="../../assets/Images/{{product.productCategory.subCategory}}/{{product.id}}/1.jpg" alt=""
@@ -44,9 +44,9 @@
                      class="img-fluid rounded-start" alt="Product Image" OpenProductDetails [productId]="product.id">
             </div>
             <div class="col d-flex flex-column">
-                <div class="card-header text-center">
+                <!-- <div class="card-header text-center">
                     Header
-                </div>
+                </div> -->
 
                 <div class="card-body">
                     <h5 class="card-title title"> {{product.title}} </h5>
