--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,12 +1,10 @@
-<footer class="w-100 h-100 bg-light my-shadow d-flex justify-content-around align-items-center fs-4">
+<footer class="w-100 my-shadow d-flex justify-content-around align-items-center fs-4" style="height: 2rem; background-color: #C0C0C0;">
     <div>
-        <span class="me-3">Coded By:</span>
-        <span class="fw-bold fst-italic">Christos Arseniou</span>
+        <span class="me-3" style="font-size: 1rem;">Coded By:</span>
+        <span class="fw-bold fst-italic" style="font-size: 1rem;">Christos Arseniou</span>
     </div>
-
-
-
+    
     <div>
-        <span>&copy; Copyright 2025</span>
+        <span style="font-size: 1rem;">&copy; Copyright - All Rights Reserved 2025</span>
     </div>
 </footer>
