--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="my-container mx-auto">
 
-    <div class="mb-4 my-shadow my-rounded-corner overflow-hidden" *ngFor="let suggestedProduct of suggestedProducts">
+    <div class="mb-4 my-shadow my-rounded-corner overflow-hidden backround" *ngFor="let suggestedProduct of suggestedProducts">
         <div class="product-baner position-relative">
-            <button type="button" class="btn btn-outline-light btn-lg">Shop Now</button>
+            <button type="button" class="btn btn-outline-light btn-lg" style="margin-left: 25%;">Shop Now</button>
 
             <img src="../../assets/Images/{{suggestedProduct.banerimage}}" class="w-100" alt="Baner Image">
         </div>
